<resources>
    <string name="app_name">Inventory_Application</string>
    <string name="loginRequestMsg">Please login or create an account.</string>
    <string name="userNameHint">Username</string>
    <string name="passwordNameHint">Password</string>
    <string name="loginButtonTxt">Login</string>
    <string name="registerButtonTxt">Register</string>
    <string name="inventoryBarText">Inventory</string>
    <string name="actionSearch">Search for Item</string>
    <string name="itemNameHeader">Item Name</string>
    <string name="subtractButton">Subtract from Count</string>
    <string name="additionButton">Add to Count</string>
    <string name="deleteButton">Delete from List</string>
    <string name="FAB">Add Item</string>
    <string name="actionSettings">Go to Settings</string>
    <string name="settingsText">Settings</string>

    <string-array name="placeHolderItems">
        <item>Pork</item>
        <item>Chicken</item>
        <item>Eggs</item>
        <item>Pepper</item>
        <item>Salt</item>
        <item>Hot Sauce</item>
        <item>item7</item>
        <item>item8</item>
        <item>item9</item>
        <item>item10</item>
        <item>item11</item>
        <item>item12</item>
        <item>item13</item>
        <item>item14</item>
        <item>item15</item>
    </string-array>

    <integer-array name="placeHolderItemCounts">
        <item>2</item>
        <item>5</item>
        <item>24</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </integer-array>
</resources>